src/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');

@import "tailwindcss";

html.lenis,
html.lenis body {
  height: auto;
}

.lenis:not(.lenis-autoToggle).lenis-stopped {
  overflow: clip;
}

.lenis [data-lenis-prevent],
.lenis [data-lenis-prevent-wheel],
.lenis [data-lenis-prevent-touch] {
  overscroll-behavior: contain;
}

.lenis.lenis-smooth iframe {
  pointer-events: none;
}

.lenis.lenis-autoToggle {
  transition-property: overflow;
  transition-duration: 1ms;
  transition-behavior: allow-discrete;
}

/* App base styles (optional) */
:root {
  color-scheme: light dark;
}

@theme {
  --font-text: 'Montserrat', sans-serif;
  --font-brand: 'Source Sans 3', sans-serif;
  --color-brand: #bc0021;
}

html,
body {
  height: 100%;
  font-family: var(--font-text);
}

.button {
  @apply bg-brand text-white px-6 py-3 rounded-md hover:bg-brand/90 transition cursor-pointer;
}

/* Modal styles */
.modal {
  @apply fixed inset-0 bg-white z-50 opacity-0 pointer-events-none transition-opacity duration-300 ease-in-out overflow-hidden;
}

.modal.active {
  @apply opacity-100 pointer-events-auto;
}

.modal-content {
  @apply max-w-4xl w-full h-full overflow-y-auto p-6 md:p-8 mx-auto flex flex-col justify-center items-center;
}

.modal-close {
  @apply fixed top-4 right-4 md:top-6 md:right-6 z-10 border-0 rounded-md cursor-pointer flex items-center justify-center transition-colors duration-200 text-brand hover:text-brand/80;
}

